# fastapi-postgresql

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  settings.py
controller/: character.py  item.py
database/entity/: base_entity.py  character.py  item.py
database/entity_manager/: character.py  item.py
postman_sample/: rpg_postman_collection.json
utils/: pagination.py
